// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should change its content concerning the type 1`] = `
<Text
  align="left"
  label={false}
  strong={false}
  theme={
    Object {
      "color": Object {
        "black": "#484848",
        "error": "#dd3333",
        "gray": "#f0f0f0",
        "overlay": "rgba(0, 0, 0, .15)",
        "primary": "#0082c8",
        "secondary": "#00baf2",
        "success": "#33bb33",
        "warn": "#dd3333",
        "white": "#fefefe",
      },
      "shape": Object {
        "border": ".125rem solid rgba(0, 0, 0, .15)",
        "margin": ".25rem .125rem",
        "padding": ".875rem 1rem",
        "radius": ".25rem",
        "shadow": "0 .25rem .25rem 0 rgba(0, 0, 0, .15)",
        "size": "1rem",
      },
      "text": Object {
        "color": "#484848",
        "size": "1rem",
      },
      "transition": Object {
        "time": ".3s ease",
      },
    }
  }
  transform="none"
  type="h1"
>
  <styled.h1
    align="left"
    label={false}
    strong={true}
    theme={
      Object {
        "color": Object {
          "black": "#484848",
          "error": "#dd3333",
          "gray": "#f0f0f0",
          "overlay": "rgba(0, 0, 0, .15)",
          "primary": "#0082c8",
          "secondary": "#00baf2",
          "success": "#33bb33",
          "warn": "#dd3333",
          "white": "#fefefe",
        },
        "shape": Object {
          "border": ".125rem solid rgba(0, 0, 0, .15)",
          "margin": ".25rem .125rem",
          "padding": ".875rem 1rem",
          "radius": ".25rem",
          "shadow": "0 .25rem .25rem 0 rgba(0, 0, 0, .15)",
          "size": "1rem",
        },
        "text": Object {
          "color": "#484848",
          "size": "1rem",
        },
        "transition": Object {
          "time": ".3s ease",
        },
      }
    }
    transform="none"
  >
    <h1
      className="sc-htpNat ioWKrK"
      label={false}
      transform="none"
    >
      default
    </h1>
  </styled.h1>
</Text>
`;

exports[`should change its content concerning the type 2`] = `
<Text
  align="left"
  label={false}
  strong={false}
  theme={
    Object {
      "color": Object {
        "black": "#484848",
        "error": "#dd3333",
        "gray": "#f0f0f0",
        "overlay": "rgba(0, 0, 0, .15)",
        "primary": "#0082c8",
        "secondary": "#00baf2",
        "success": "#33bb33",
        "warn": "#dd3333",
        "white": "#fefefe",
      },
      "shape": Object {
        "border": ".125rem solid rgba(0, 0, 0, .15)",
        "margin": ".25rem .125rem",
        "padding": ".875rem 1rem",
        "radius": ".25rem",
        "shadow": "0 .25rem .25rem 0 rgba(0, 0, 0, .15)",
        "size": "1rem",
      },
      "text": Object {
        "color": "#484848",
        "size": "1rem",
      },
      "transition": Object {
        "time": ".3s ease",
      },
    }
  }
  transform="none"
  type="h2"
>
  <styled.h2
    align="left"
    label={false}
    strong={true}
    theme={
      Object {
        "color": Object {
          "black": "#484848",
          "error": "#dd3333",
          "gray": "#f0f0f0",
          "overlay": "rgba(0, 0, 0, .15)",
          "primary": "#0082c8",
          "secondary": "#00baf2",
          "success": "#33bb33",
          "warn": "#dd3333",
          "white": "#fefefe",
        },
        "shape": Object {
          "border": ".125rem solid rgba(0, 0, 0, .15)",
          "margin": ".25rem .125rem",
          "padding": ".875rem 1rem",
          "radius": ".25rem",
          "shadow": "0 .25rem .25rem 0 rgba(0, 0, 0, .15)",
          "size": "1rem",
        },
        "text": Object {
          "color": "#484848",
          "size": "1rem",
        },
        "transition": Object {
          "time": ".3s ease",
        },
      }
    }
    transform="none"
  >
    <h2
      className="sc-bxivhb Bjdhb"
      label={false}
      transform="none"
    >
      default
    </h2>
  </styled.h2>
</Text>
`;

exports[`should change its content concerning the type 3`] = `
<Text
  align="left"
  label={false}
  strong={false}
  theme={
    Object {
      "color": Object {
        "black": "#484848",
        "error": "#dd3333",
        "gray": "#f0f0f0",
        "overlay": "rgba(0, 0, 0, .15)",
        "primary": "#0082c8",
        "secondary": "#00baf2",
        "success": "#33bb33",
        "warn": "#dd3333",
        "white": "#fefefe",
      },
      "shape": Object {
        "border": ".125rem solid rgba(0, 0, 0, .15)",
        "margin": ".25rem .125rem",
        "padding": ".875rem 1rem",
        "radius": ".25rem",
        "shadow": "0 .25rem .25rem 0 rgba(0, 0, 0, .15)",
        "size": "1rem",
      },
      "text": Object {
        "color": "#484848",
        "size": "1rem",
      },
      "transition": Object {
        "time": ".3s ease",
      },
    }
  }
  transform="none"
  type="h3"
>
  <styled.h3
    align="left"
    label={false}
    strong={true}
    theme={
      Object {
        "color": Object {
          "black": "#484848",
          "error": "#dd3333",
          "gray": "#f0f0f0",
          "overlay": "rgba(0, 0, 0, .15)",
          "primary": "#0082c8",
          "secondary": "#00baf2",
          "success": "#33bb33",
          "warn": "#dd3333",
          "white": "#fefefe",
        },
        "shape": Object {
          "border": ".125rem solid rgba(0, 0, 0, .15)",
          "margin": ".25rem .125rem",
          "padding": ".875rem 1rem",
          "radius": ".25rem",
          "shadow": "0 .25rem .25rem 0 rgba(0, 0, 0, .15)",
          "size": "1rem",
        },
        "text": Object {
          "color": "#484848",
          "size": "1rem",
        },
        "transition": Object {
          "time": ".3s ease",
        },
      }
    }
    transform="none"
  >
    <h3
      className="sc-ifAKCX jcUeAt"
      label={false}
      transform="none"
    >
      default
    </h3>
  </styled.h3>
</Text>
`;

exports[`should change its content concerning the type 4`] = `
<Text
  align="left"
  label={false}
  strong={false}
  theme={
    Object {
      "color": Object {
        "black": "#484848",
        "error": "#dd3333",
        "gray": "#f0f0f0",
        "overlay": "rgba(0, 0, 0, .15)",
        "primary": "#0082c8",
        "secondary": "#00baf2",
        "success": "#33bb33",
        "warn": "#dd3333",
        "white": "#fefefe",
      },
      "shape": Object {
        "border": ".125rem solid rgba(0, 0, 0, .15)",
        "margin": ".25rem .125rem",
        "padding": ".875rem 1rem",
        "radius": ".25rem",
        "shadow": "0 .25rem .25rem 0 rgba(0, 0, 0, .15)",
        "size": "1rem",
      },
      "text": Object {
        "color": "#484848",
        "size": "1rem",
      },
      "transition": Object {
        "time": ".3s ease",
      },
    }
  }
  transform="none"
  type="h4"
>
  <styled.h4
    align="left"
    label={false}
    strong={true}
    theme={
      Object {
        "color": Object {
          "black": "#484848",
          "error": "#dd3333",
          "gray": "#f0f0f0",
          "overlay": "rgba(0, 0, 0, .15)",
          "primary": "#0082c8",
          "secondary": "#00baf2",
          "success": "#33bb33",
          "warn": "#dd3333",
          "white": "#fefefe",
        },
        "shape": Object {
          "border": ".125rem solid rgba(0, 0, 0, .15)",
          "margin": ".25rem .125rem",
          "padding": ".875rem 1rem",
          "radius": ".25rem",
          "shadow": "0 .25rem .25rem 0 rgba(0, 0, 0, .15)",
          "size": "1rem",
        },
        "text": Object {
          "color": "#484848",
          "size": "1rem",
        },
        "transition": Object {
          "time": ".3s ease",
        },
      }
    }
    transform="none"
  >
    <h4
      className="sc-EHOje iwTRAn"
      label={false}
      transform="none"
    >
      default
    </h4>
  </styled.h4>
</Text>
`;

exports[`should change its content concerning the type 5`] = `
<Text
  align="left"
  label={false}
  strong={false}
  theme={
    Object {
      "color": Object {
        "black": "#484848",
        "error": "#dd3333",
        "gray": "#f0f0f0",
        "overlay": "rgba(0, 0, 0, .15)",
        "primary": "#0082c8",
        "secondary": "#00baf2",
        "success": "#33bb33",
        "warn": "#dd3333",
        "white": "#fefefe",
      },
      "shape": Object {
        "border": ".125rem solid rgba(0, 0, 0, .15)",
        "margin": ".25rem .125rem",
        "padding": ".875rem 1rem",
        "radius": ".25rem",
        "shadow": "0 .25rem .25rem 0 rgba(0, 0, 0, .15)",
        "size": "1rem",
      },
      "text": Object {
        "color": "#484848",
        "size": "1rem",
      },
      "transition": Object {
        "time": ".3s ease",
      },
    }
  }
  transform="none"
  type="h5"
>
  <styled.h5
    align="left"
    label={false}
    strong={true}
    theme={
      Object {
        "color": Object {
          "black": "#484848",
          "error": "#dd3333",
          "gray": "#f0f0f0",
          "overlay": "rgba(0, 0, 0, .15)",
          "primary": "#0082c8",
          "secondary": "#00baf2",
          "success": "#33bb33",
          "warn": "#dd3333",
          "white": "#fefefe",
        },
        "shape": Object {
          "border": ".125rem solid rgba(0, 0, 0, .15)",
          "margin": ".25rem .125rem",
          "padding": ".875rem 1rem",
          "radius": ".25rem",
          "shadow": "0 .25rem .25rem 0 rgba(0, 0, 0, .15)",
          "size": "1rem",
        },
        "text": Object {
          "color": "#484848",
          "size": "1rem",
        },
        "transition": Object {
          "time": ".3s ease",
        },
      }
    }
    transform="none"
  >
    <h5
      className="sc-bZQynM geSjRL"
      label={false}
      transform="none"
    >
      default
    </h5>
  </styled.h5>
</Text>
`;

exports[`should change its content concerning the type 6`] = `
<Text
  align="left"
  label={false}
  strong={false}
  theme={
    Object {
      "color": Object {
        "black": "#484848",
        "error": "#dd3333",
        "gray": "#f0f0f0",
        "overlay": "rgba(0, 0, 0, .15)",
        "primary": "#0082c8",
        "secondary": "#00baf2",
        "success": "#33bb33",
        "warn": "#dd3333",
        "white": "#fefefe",
      },
      "shape": Object {
        "border": ".125rem solid rgba(0, 0, 0, .15)",
        "margin": ".25rem .125rem",
        "padding": ".875rem 1rem",
        "radius": ".25rem",
        "shadow": "0 .25rem .25rem 0 rgba(0, 0, 0, .15)",
        "size": "1rem",
      },
      "text": Object {
        "color": "#484848",
        "size": "1rem",
      },
      "transition": Object {
        "time": ".3s ease",
      },
    }
  }
  transform="none"
  type="h6"
>
  <styled.h6
    align="left"
    label={false}
    strong={true}
    theme={
      Object {
        "color": Object {
          "black": "#484848",
          "error": "#dd3333",
          "gray": "#f0f0f0",
          "overlay": "rgba(0, 0, 0, .15)",
          "primary": "#0082c8",
          "secondary": "#00baf2",
          "success": "#33bb33",
          "warn": "#dd3333",
          "white": "#fefefe",
        },
        "shape": Object {
          "border": ".125rem solid rgba(0, 0, 0, .15)",
          "margin": ".25rem .125rem",
          "padding": ".875rem 1rem",
          "radius": ".25rem",
          "shadow": "0 .25rem .25rem 0 rgba(0, 0, 0, .15)",
          "size": "1rem",
        },
        "text": Object {
          "color": "#484848",
          "size": "1rem",
        },
        "transition": Object {
          "time": ".3s ease",
        },
      }
    }
    transform="none"
  >
    <h6
      className="sc-gzVnrw otBkM"
      label={false}
      transform="none"
    >
      default
    </h6>
  </styled.h6>
</Text>
`;

exports[`should change its style if strong 1`] = `
<Text
  align="left"
  label={false}
  strong={true}
  theme={
    Object {
      "color": Object {
        "black": "#484848",
        "error": "#dd3333",
        "gray": "#f0f0f0",
        "overlay": "rgba(0, 0, 0, .15)",
        "primary": "#0082c8",
        "secondary": "#00baf2",
        "success": "#33bb33",
        "warn": "#dd3333",
        "white": "#fefefe",
      },
      "shape": Object {
        "border": ".125rem solid rgba(0, 0, 0, .15)",
        "margin": ".25rem .125rem",
        "padding": ".875rem 1rem",
        "radius": ".25rem",
        "shadow": "0 .25rem .25rem 0 rgba(0, 0, 0, .15)",
        "size": "1rem",
      },
      "text": Object {
        "color": "#484848",
        "size": "1rem",
      },
      "transition": Object {
        "time": ".3s ease",
      },
    }
  }
  transform="none"
  type=""
>
  <styled.p
    align="left"
    label={false}
    strong={true}
    theme={
      Object {
        "color": Object {
          "black": "#484848",
          "error": "#dd3333",
          "gray": "#f0f0f0",
          "overlay": "rgba(0, 0, 0, .15)",
          "primary": "#0082c8",
          "secondary": "#00baf2",
          "success": "#33bb33",
          "warn": "#dd3333",
          "white": "#fefefe",
        },
        "shape": Object {
          "border": ".125rem solid rgba(0, 0, 0, .15)",
          "margin": ".25rem .125rem",
          "padding": ".875rem 1rem",
          "radius": ".25rem",
          "shadow": "0 .25rem .25rem 0 rgba(0, 0, 0, .15)",
          "size": "1rem",
        },
        "text": Object {
          "color": "#484848",
          "size": "1rem",
        },
        "transition": Object {
          "time": ".3s ease",
        },
      }
    }
    transform="none"
  >
    <p
      className="sc-bdVaJa gbaNEY"
      label={false}
      transform="none"
    >
      default
    </p>
  </styled.p>
</Text>
`;

exports[`should change its style on primary 1`] = `
<Text
  align="left"
  label={false}
  primary={true}
  strong={false}
  theme={
    Object {
      "color": Object {
        "black": "#484848",
        "error": "#dd3333",
        "gray": "#f0f0f0",
        "overlay": "rgba(0, 0, 0, .15)",
        "primary": "#0082c8",
        "secondary": "#00baf2",
        "success": "#33bb33",
        "warn": "#dd3333",
        "white": "#fefefe",
      },
      "shape": Object {
        "border": ".125rem solid rgba(0, 0, 0, .15)",
        "margin": ".25rem .125rem",
        "padding": ".875rem 1rem",
        "radius": ".25rem",
        "shadow": "0 .25rem .25rem 0 rgba(0, 0, 0, .15)",
        "size": "1rem",
      },
      "text": Object {
        "color": "#484848",
        "size": "1rem",
      },
      "transition": Object {
        "time": ".3s ease",
      },
    }
  }
  transform="none"
  type=""
>
  <styled.p
    align="left"
    label={false}
    primary={true}
    strong={false}
    theme={
      Object {
        "color": Object {
          "black": "#484848",
          "error": "#dd3333",
          "gray": "#f0f0f0",
          "overlay": "rgba(0, 0, 0, .15)",
          "primary": "#0082c8",
          "secondary": "#00baf2",
          "success": "#33bb33",
          "warn": "#dd3333",
          "white": "#fefefe",
        },
        "shape": Object {
          "border": ".125rem solid rgba(0, 0, 0, .15)",
          "margin": ".25rem .125rem",
          "padding": ".875rem 1rem",
          "radius": ".25rem",
          "shadow": "0 .25rem .25rem 0 rgba(0, 0, 0, .15)",
          "size": "1rem",
        },
        "text": Object {
          "color": "#484848",
          "size": "1rem",
        },
        "transition": Object {
          "time": ".3s ease",
        },
      }
    }
    transform="none"
  >
    <p
      className="sc-bdVaJa dpLaSA"
      label={false}
      transform="none"
    >
      default
    </p>
  </styled.p>
</Text>
`;

exports[`should change its style on secondary 1`] = `
<Text
  align="left"
  label={false}
  secondary={true}
  strong={false}
  theme={
    Object {
      "color": Object {
        "black": "#484848",
        "error": "#dd3333",
        "gray": "#f0f0f0",
        "overlay": "rgba(0, 0, 0, .15)",
        "primary": "#0082c8",
        "secondary": "#00baf2",
        "success": "#33bb33",
        "warn": "#dd3333",
        "white": "#fefefe",
      },
      "shape": Object {
        "border": ".125rem solid rgba(0, 0, 0, .15)",
        "margin": ".25rem .125rem",
        "padding": ".875rem 1rem",
        "radius": ".25rem",
        "shadow": "0 .25rem .25rem 0 rgba(0, 0, 0, .15)",
        "size": "1rem",
      },
      "text": Object {
        "color": "#484848",
        "size": "1rem",
      },
      "transition": Object {
        "time": ".3s ease",
      },
    }
  }
  transform="none"
  type=""
>
  <styled.p
    align="left"
    label={false}
    secondary={true}
    strong={false}
    theme={
      Object {
        "color": Object {
          "black": "#484848",
          "error": "#dd3333",
          "gray": "#f0f0f0",
          "overlay": "rgba(0, 0, 0, .15)",
          "primary": "#0082c8",
          "secondary": "#00baf2",
          "success": "#33bb33",
          "warn": "#dd3333",
          "white": "#fefefe",
        },
        "shape": Object {
          "border": ".125rem solid rgba(0, 0, 0, .15)",
          "margin": ".25rem .125rem",
          "padding": ".875rem 1rem",
          "radius": ".25rem",
          "shadow": "0 .25rem .25rem 0 rgba(0, 0, 0, .15)",
          "size": "1rem",
        },
        "text": Object {
          "color": "#484848",
          "size": "1rem",
        },
        "transition": Object {
          "time": ".3s ease",
        },
      }
    }
    transform="none"
  >
    <p
      className="sc-bdVaJa cEmXqb"
      label={false}
      transform="none"
    >
      default
    </p>
  </styled.p>
</Text>
`;

exports[`should change its style on success 1`] = `
<Text
  align="left"
  label={false}
  strong={false}
  success={true}
  theme={
    Object {
      "color": Object {
        "black": "#484848",
        "error": "#dd3333",
        "gray": "#f0f0f0",
        "overlay": "rgba(0, 0, 0, .15)",
        "primary": "#0082c8",
        "secondary": "#00baf2",
        "success": "#33bb33",
        "warn": "#dd3333",
        "white": "#fefefe",
      },
      "shape": Object {
        "border": ".125rem solid rgba(0, 0, 0, .15)",
        "margin": ".25rem .125rem",
        "padding": ".875rem 1rem",
        "radius": ".25rem",
        "shadow": "0 .25rem .25rem 0 rgba(0, 0, 0, .15)",
        "size": "1rem",
      },
      "text": Object {
        "color": "#484848",
        "size": "1rem",
      },
      "transition": Object {
        "time": ".3s ease",
      },
    }
  }
  transform="none"
  type=""
>
  <styled.p
    align="left"
    label={false}
    strong={false}
    success={true}
    theme={
      Object {
        "color": Object {
          "black": "#484848",
          "error": "#dd3333",
          "gray": "#f0f0f0",
          "overlay": "rgba(0, 0, 0, .15)",
          "primary": "#0082c8",
          "secondary": "#00baf2",
          "success": "#33bb33",
          "warn": "#dd3333",
          "white": "#fefefe",
        },
        "shape": Object {
          "border": ".125rem solid rgba(0, 0, 0, .15)",
          "margin": ".25rem .125rem",
          "padding": ".875rem 1rem",
          "radius": ".25rem",
          "shadow": "0 .25rem .25rem 0 rgba(0, 0, 0, .15)",
          "size": "1rem",
        },
        "text": Object {
          "color": "#484848",
          "size": "1rem",
        },
        "transition": Object {
          "time": ".3s ease",
        },
      }
    }
    transform="none"
  >
    <p
      className="sc-bdVaJa iWuuOf"
      label={false}
      transform="none"
    >
      default
    </p>
  </styled.p>
</Text>
`;

exports[`should change its style on warn 1`] = `
<Text
  align="left"
  label={false}
  strong={false}
  theme={
    Object {
      "color": Object {
        "black": "#484848",
        "error": "#dd3333",
        "gray": "#f0f0f0",
        "overlay": "rgba(0, 0, 0, .15)",
        "primary": "#0082c8",
        "secondary": "#00baf2",
        "success": "#33bb33",
        "warn": "#dd3333",
        "white": "#fefefe",
      },
      "shape": Object {
        "border": ".125rem solid rgba(0, 0, 0, .15)",
        "margin": ".25rem .125rem",
        "padding": ".875rem 1rem",
        "radius": ".25rem",
        "shadow": "0 .25rem .25rem 0 rgba(0, 0, 0, .15)",
        "size": "1rem",
      },
      "text": Object {
        "color": "#484848",
        "size": "1rem",
      },
      "transition": Object {
        "time": ".3s ease",
      },
    }
  }
  transform="none"
  type=""
  warn={true}
>
  <styled.p
    align="left"
    label={false}
    strong={false}
    theme={
      Object {
        "color": Object {
          "black": "#484848",
          "error": "#dd3333",
          "gray": "#f0f0f0",
          "overlay": "rgba(0, 0, 0, .15)",
          "primary": "#0082c8",
          "secondary": "#00baf2",
          "success": "#33bb33",
          "warn": "#dd3333",
          "white": "#fefefe",
        },
        "shape": Object {
          "border": ".125rem solid rgba(0, 0, 0, .15)",
          "margin": ".25rem .125rem",
          "padding": ".875rem 1rem",
          "radius": ".25rem",
          "shadow": "0 .25rem .25rem 0 rgba(0, 0, 0, .15)",
          "size": "1rem",
        },
        "text": Object {
          "color": "#484848",
          "size": "1rem",
        },
        "transition": Object {
          "time": ".3s ease",
        },
      }
    }
    transform="none"
    warn={true}
  >
    <p
      className="sc-bdVaJa dQjvHT"
      label={false}
      transform="none"
    >
      default
    </p>
  </styled.p>
</Text>
`;

exports[`should render a text 1`] = `
<Text
  align="left"
  label={false}
  strong={false}
  theme={
    Object {
      "color": Object {
        "black": "#484848",
        "error": "#dd3333",
        "gray": "#f0f0f0",
        "overlay": "rgba(0, 0, 0, .15)",
        "primary": "#0082c8",
        "secondary": "#00baf2",
        "success": "#33bb33",
        "warn": "#dd3333",
        "white": "#fefefe",
      },
      "shape": Object {
        "border": ".125rem solid rgba(0, 0, 0, .15)",
        "margin": ".25rem .125rem",
        "padding": ".875rem 1rem",
        "radius": ".25rem",
        "shadow": "0 .25rem .25rem 0 rgba(0, 0, 0, .15)",
        "size": "1rem",
      },
      "text": Object {
        "color": "#484848",
        "size": "1rem",
      },
      "transition": Object {
        "time": ".3s ease",
      },
    }
  }
  transform="none"
  type=""
>
  <styled.p
    align="left"
    label={false}
    strong={false}
    theme={
      Object {
        "color": Object {
          "black": "#484848",
          "error": "#dd3333",
          "gray": "#f0f0f0",
          "overlay": "rgba(0, 0, 0, .15)",
          "primary": "#0082c8",
          "secondary": "#00baf2",
          "success": "#33bb33",
          "warn": "#dd3333",
          "white": "#fefefe",
        },
        "shape": Object {
          "border": ".125rem solid rgba(0, 0, 0, .15)",
          "margin": ".25rem .125rem",
          "padding": ".875rem 1rem",
          "radius": ".25rem",
          "shadow": "0 .25rem .25rem 0 rgba(0, 0, 0, .15)",
          "size": "1rem",
        },
        "text": Object {
          "color": "#484848",
          "size": "1rem",
        },
        "transition": Object {
          "time": ".3s ease",
        },
      }
    }
    transform="none"
  >
    <p
      className="sc-bdVaJa eaIhdW"
      label={false}
      transform="none"
    >
      default
    </p>
  </styled.p>
</Text>
`;
